# SingleCellStitchit

./: README.md  main.nf  nextflow.config
bam_merge/: CMakeLists.txt  CMakeLists.txt.in
bam_merge/bam/: CMakeLists.txt  GzipFileType.h  InputFile.cpp  InputFile.h  SamFile.cpp  SamFile.h  SamInterface.cpp  SamRecord.cpp  SamRecord.h  StringArray.cpp  StringBasics.cpp  bgzf.c  bgzf.h  khash.h  knetfile.c
bam_merge/core/: CMakeLists.txt  main.cpp  simple_io_test.cpp
bam_merge/zlib/: CMakeLists.txt
stitchit/core/: ExpressionReader.cpp  GTFReader.cpp  main.cpp
