project(bam_merge_bam CXX)
add_library(bam
	Hash.cpp
	PedigreeLoader.cpp
	IndexBase.cpp 
	PedigreePerson.cpp
	BaseAsciiMap.cpp
	InplaceMerge.cpp
	PedigreeTrim.cpp
	BaseQualityHelper.cpp
  	Input.cpp
	PedigreeTwin.cpp
	BaseUtilities.cpp
	BgzfFileTypeRecovery.cpp
	InputFile.cpp
	BasicHash.cpp
	IntArray.cpp
	BgzfFileType.cpp
	IntHash.cpp
      	LongLongCounter.cpp
	CharBuffer.cpp
	MapFunction.cpp   
 	QuickIndex.cpp
	SmithWaterman.cpp
	Chromosome.cpp  
	MathMatrix.cpp
	Random.cpp  
	Sort.cpp  
	Cigar.cpp 
	MathVector.cpp
	ReferenceSequence.cpp
  	StatGenStatus.cpp
	MemoryAllocators.cpp  
     	STLUtilities.cpp   
	CigarRoller.cpp 
	MemoryInfo.cpp      
   	SamCoordOutput.cpp     
    	StringAlias.cpp         
	Error.cpp   
	MemoryMap.cpp    
	StringArray.cpp    
	ErrorHandler.cpp     
   	MemoryMapArray.cpp     
        StringBasics.cpp       
	FileType.cpp     
	MiniDeflate.cpp      
 	StringHash.cpp     
	FortranFormat.cpp     
    	NonOverlapRegions.cpp   
	StringMap.cpp         
	Generic.cpp     
	Parameters.cpp 
	Tabix.cpp         
	Pedigree.cpp    
   	UncompressedFileType.cpp           
 	GenomeSequence.cpp      
      	PedigreeAlleleFreq.cpp
  	glfHandler.cpp          
	GenotypeLists.cpp      
     	PedigreeDescription.cpp        
	GzipFileType.cpp    
  	PedigreeFamily.cpp   
	GzipHeader.cpp      
  	PedigreeGlobals.cpp
	knetfile.c
	bgzf.c
	PhoneHome.cpp
	SamFileHeader.cpp
	SamFile.cpp
	GenericSamInterface.cpp
	SamInterface.cpp
	BamInterface.cpp
	SamRecord.cpp
	BamIndex.cpp
	SamHeaderHD.cpp
	SamHeaderPG.cpp
	SamHeaderRecord.cpp
	SamHeaderSQ.cpp
	SamHeaderRG.cpp
	SamHeaderTag.cpp
	SamValidation.cpp
	SamStatistics.cpp
	SamQuerySeqWithRefHelper.cpp
	SamFilter.cpp
	PileupElement.cpp
	PileupElementBaseQual.cpp
	SamReferenceInfo.cpp
	SamTags.cpp
	PosList.cpp
	CigarHelper.cpp
	SamRecordPool.cpp
	SamRecordHelper.cpp
)

target_link_libraries(bam zlib)
